# unipept-index

./: .gitignore  .gitmodules  Cargo.toml  README.md  codecov.yml
.devcontainer/: devcontainer.json
.github/workflows/: build_index.yml  coverage.yml  lint.yml  test.yml
bitarray/: README.md
bitarray/src/: binary.rs  lib.rs
fa-compression/: Cargo.toml  README.md
fa-compression/benches/: bench_main.rs  util.rs
fa-compression/benches/algorithm1/: decode.rs  encode.rs  mod.rs
fa-compression/benches/algorithm2/: decode.rs  encode.rs
fa-compression/src/: decode.rs  encode.rs  lib.rs
fa-compression/src/algorithm1/: decode.rs  encode.rs  mod.rs
fa-compression/src/algorithm2/: decode.rs  encode.rs  mod.rs
libsais64-rs/: builder.rs  libsais-wrapper.h
libsais64-rs/src/: bitpacking.rs  build.rs  lib.rs
mappings/: Cargo.toml
mappings/src/: lib.rs  proteins.rs  taxonomy.rs
sa-builder/: Cargo.toml  README.md  build-compressed.pbs  build.pbs
sa-builder/src/: binary.rs  bitpacking.rs  lib.rs  main.rs
sa-compression/: Cargo.toml
sa-compression/src/: lib.rs
sa-index/: Cargo.toml  out.txt
sa-index/src/: binary.rs  bounds_cache.rs  bounds_table.rs  lib.rs  main.rs  peptide_search.rs  sa_searcher.rs  suffix_to_protein_index.rs  util.rs
sa-mappings/: Cargo.toml
sa-mappings/src/: functionality.rs  lib.rs  proteins.rs  taxonomy.rs
sa-server/: Cargo.toml
sa-server/src/: main.rs
text-compression/: Cargo.toml
text-compression/src/: lib.rs
