[package]
name = "mappings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempdir = "0.3.7"
static_assertions = "1.1.0"

[dependencies]
fa-compression = { path = "../fa-compression" }
memchr = "2.5.0"
umgap = "1.1.0"
